--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Primera Página HTML</title>
 </head>
 <body>
-	<h1>Mi primera página web</h1>
-	<p>Esta es mi primera pagina web, esoty ansioso por aprender más cosas.</p>
+	<h1>Juan Sebastian Sánchez Prada</h1>
+	<h2>Mi perfil</h2>
+	<p>Soy estudiante de Ingeniería de Sistemas en la <b>Universidad Francisco de Paula Santander</b>, actualmente en el curso de Programación Web.</p>
 	
+	<h2>Mis estudios</h2>
+	<ul>
+		<li>Graduado de Bachiller</li>
+		<li>Pregrado de Ingenieria de Sistemas</li>
+	</ul>
+
+	<h2>Lenguajes con conocimientos</h2>
+	<ol>
+		<li>Java</li>
+		<li>C++</li>
+		<li>Python</li>
+		<li>JavaScript</li>
+		<li>Assembly</li>
+	</ol>
 </body>
 </html>
