Tablas e imagen añadida

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Primera Página HTML</title>
+	<style media="screen">
+	   img#logo{
+	   	max-width: 10%;
+	   }
+	   table{
+	   	border-collapse: collapse;
+	   }
+	   table, td, th {
+  		border: 1px solid black;
+  		margin: 1px;
+	   }
+	</style>
 </head>
 <body>
 	<h1>Juan Sebastian Sánchez Prada</h1>
@@ -24,5 +36,22 @@
 		<li>JavaScript</li>
 		<li>Assembly</li>
 	</ol>
+
+	<table>
+		<tr>
+			<th>Lugar de Estudio</th>
+			<th>Años</th>
+		</tr>
+		<tr>
+			<td>Comfanorte</td>
+			<td>2006-2017</td>
+		</tr>
+		<tr>
+			<td>UFPS</td>
+			<td>2018-Hoy</td>
+		</tr>
+	</table>
+
+		<a href="https://ww2.ufps.edu.co/" target="blank"><img id="logo" src="UFPS-logo.png"></a>
 </body>
 </html>
