Primer uso de css

--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Primera Página HTML</title>
-	<style media="screen">
-	   img#logo{
-	   	max-width: 10%;
-	   }
-	   table{
-	   	border-collapse: collapse;
-	   }
-	   table, td, th {
-  		border: 1px solid black;
-  		margin: 1px;
-	   }
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 <body>
 	<h1>Juan Sebastian Sánchez Prada</h1>
@@ -26,6 +15,7 @@
 	<ul>
 		<li>Graduado de Bachiller</li>
 		<li>Pregrado de Ingenieria de Sistemas</li>
+		<li><a href="https://www.google.com" target="blank">Buscar</a></li>
 	</ul>
 
 	<h2>Lenguajes con conocimientos</h2>
@@ -35,6 +25,7 @@
 		<li>Python</li>
 		<li>JavaScript</li>
 		<li>Assembly</li>
+		
 	</ol>
 
 	<table>
